# libamspace

./: .gitignore  CMakeLists.txt  README  README.md
src/: CMakeLists.txt  angles.c  angles.h  config.h.in  coord.c  coord.h  date.c  date.h  deep.c  deep.h  elp82.c  elp82.h  exports.h  fk5.c  fk5.h  functions.c  functions.h  gravconst.c  gravconst.h  integrate.c  integrate.h  interpolate.c  interpolate.h  leastSquare.c  leastSquare.h  legendre.c  legendre.h  libamspace.h  linear.c  linear.h  mtx.c  mtx.h  nutations.c  nutations.h  parseutils.c  parseutils.h  precision.h  projections.c  projections.h  sat.c  (+14 more)
test/: CMakeLists.txt
test/data/: 11801.dat.orig.sgp4  11801.dat.orig.sgp8  11801.dat.vallado  11801.tle  88888.dat.orig.sgp4  88888.dat.orig.sgp8  88888.dat.vallado  88888.tle  SGP4-VER.TLE  SGP4-VER.dat.orig  vsop87.chk
test/sgpperformance/: CMakeLists.txt  main.c
test/sgpverify/: CMakeLists.txt  main.c
test/testmath/: CMakeLists.txt  main.c
test/testprojections/: CMakeLists.txt  main.c
test/vsop87test/: CMakeLists.txt  main.c
utils/: CMakeLists.txt  getAllTLEs.sh
utils/elp82/: CMakeLists.txt  main.c
utils/groundtrack/: CMakeLists.txt  main.c
utils/lsolve/: CMakeLists.txt  main.c
utils/sgp/: CMakeLists.txt  main.c  runparams.h
utils/vsop87/: CMakeLists.txt  main.c
